--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_send"
-        android:icon="@android:drawable/ic_menu_send"
+        android:icon="@android:drawable/ic_menu_upload"
         android:title="@string/title_send" />
 
     <item
