--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -82,4 +82,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_get_ip" />
 
+    <Button
+        android:id="@+id/btnNetworkScanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="7dp"
+        android:text="SCAN"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_get_ip"
+        app:layout_constraintEnd_toStartOf="@+id/btn_get_ip" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
