--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -9,86 +9,79 @@
     <TextView
         android:id="@+id/fileChosen"
         android:layout_width="0dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="31dp"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_pick_file"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.65" />
+        app:layout_constraintTop_toBottomOf="@+id/found_ips" />
 
     <Button
         android:id="@+id/btn_get_ip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="27dp"
         android:text="@string/click_test"
-        app:layout_constraintBottom_toTopOf="@+id/tw_userIp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnNetworkScanner"
+        app:layout_constraintEnd_toStartOf="@+id/tw_userIp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_pick_file"
-        android:layout_width="wrap_content"
+        android:layout_width="131dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="136dp"
+        android:layout_marginStart="141dp"
+        android:layout_marginEnd="139dp"
+        android:layout_marginBottom="145dp"
         android:text="@string/click_file"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fileChosen" />
 
     <TextView
         android:id="@+id/found_ips"
         android:layout_width="0dp"
-        android:layout_height="172dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="58dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="82dp"
         android:text="TextView"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/fileChosen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tw_userIp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnNetworkScanner" />
 
     <TextView
         android:id="@+id/tw_userIp"
-        android:layout_width="0dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="26dp"
+        android:layout_width="204dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="54dp"
         android:text="TextView"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/found_ips"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_get_ip"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_get_ip" />
+        app:layout_constraintStart_toEndOf="@+id/btn_get_ip" />
 
     <Button
         android:id="@+id/btnNetworkScanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="7dp"
-        android:text="SCAN"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_get_ip"
-        app:layout_constraintEnd_toStartOf="@+id/btn_get_ip" />
+        android:layout_marginBottom="9dp"
+        android:text="SCAN USERS"
+        app:layout_constraintBottom_toTopOf="@+id/found_ips"
+        app:layout_constraintStart_toEndOf="@+id/btn_get_ip"
+        app:layout_constraintTop_toBottomOf="@+id/btn_get_ip" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
