--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -76,12 +76,13 @@
 
     <Button
         android:id="@+id/btnNetworkScanner"
-        android:layout_width="wrap_content"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="9dp"
         android:text="SCAN USERS"
         app:layout_constraintBottom_toTopOf="@+id/found_ips"
-        app:layout_constraintStart_toEndOf="@+id/btn_get_ip"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_get_ip" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
