--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_send" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_receive"
         android:icon="@android:drawable/stat_sys_download_done"
         android:title="@string/title_receive" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_settings"
         android:icon="@android:drawable/ic_menu_manage"
         android:title="@string/title_settings" />
 
