--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_send"
-        android:icon="@android:drawable/ic_menu_upload"
+        android:icon="@drawable/ic_upload_black"
         android:title="@string/title_send" />
 
     <item
         android:id="@+id/navigation_receive"
-        android:icon="@android:drawable/stat_sys_download_done"
+        android:icon="@drawable/ic_download_black"
         android:title="@string/title_receive" />
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@android:drawable/ic_menu_manage"
+        android:icon="@drawable/ic_history_black"
         android:title="@string/title_settings" />
 
 </menu>
