--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -63,8 +63,8 @@
         android:id="@+id/receivedData"
         android:layout_width="333dp"
         android:layout_height="340dp"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/receiveTtile" />
 </androidx.constraintlayout.widget.ConstraintLayout>
