--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/title_receive" />
 
     <item
-        android:id="@+id/navigation_settings"
+        android:id="@+id/navigation_history"
         android:icon="@drawable/ic_history_black"
         android:title="@string/title_settings" />
 
