changed to cursorAdapter

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,11 +7,10 @@
     android:orientation="vertical"
     tools:context=".ui.history.HistoryFragment">
 
-    <!--TODO: remove debug when checked everything-->
     <ListView
         android:id="@+id/history_list"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:padding="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
@@ -19,11 +18,4 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:listitem="@android:layout/simple_list_item_1" >
     </ListView>
-    <ImageView
-        android:id="@+id/debug"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="debug image"
-        tools:src="@tools:sample/avatars" />
-
 </LinearLayout>
