--- a/app/src/main/res/layout/rowitem_history.xml
+++ b/app/src/main/res/layout/rowitem_history.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:orientation="horizontal"
@@ -11,54 +11,50 @@
         android:layout_width="95dp"
         android:layout_height="95dp"
         android:layout_marginTop="8dp"
-        tools:src="@tools:sample/avatars"
-        />
+        tools:src="@tools:sample/avatars" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_margin="8dp"
-        >
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/rowitem_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="File Name"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/rowitem_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="File Size" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginBottom="8dp"
-            >
-            <TextView
-                android:id="@+id/rowitem_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:text="File Name"/>
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1" >
-            </Space>
-            <TextView
-                android:id="@+id/rowitem_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="File Size"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="8dp"
-            >
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/rowitem_time_stamp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time Stamp"/>
+                android:text="Time Stamp" />
+
             <TextView
                 android:id="@+id/rowitem_sent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="File sent or received"/>
+                android:text="File sent or received" />
         </LinearLayout>
     </LinearLayout>
 
