--- a/app/src/main/res/layout/rowitem_history.xml
+++ b/app/src/main/res/layout/rowitem_history.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     tools:ignore="MissingPrefix">
 
@@ -15,7 +15,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="vertical">
 
@@ -23,6 +23,7 @@
             android:id="@+id/rowitem_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
             android:text="File Name"
             android:textSize="18dp"
             android:textStyle="bold" />
@@ -33,6 +34,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:layout_margin="2dp"
             android:id="@+id/rowitem_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,6 +48,7 @@
 
             <TextView
                 android:id="@+id/rowitem_time_stamp"
+                android:layout_marginBottom="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time Stamp" />
@@ -54,6 +57,7 @@
                 android:id="@+id/rowitem_sent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
                 android:text="File sent or received" />
         </LinearLayout>
     </LinearLayout>
